# rgm-pipeline

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  dashboard.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_module1.py  run_module2_3.py  run_module4.py  visualize_results.py
agents/data_engineer/: access_control.py  data_quality.py  mock_generator.py
agents/data_scientist/: causal_baseline.py  demand_forecasting.py  explainability.py  optimizer.py
agents/ml_engineer/: api.py  drift_monitor.py
config/: settings.py
docker/: Dockerfile
docs/: backlog_ideias.md  rgm_pipeline_architecture.drawio
notebooks/: experiment_xgboost_vs_llm_forecaster.ipynb
scripts/: run_module1.py  run_module2_3.py  visualize_results.py
src/rgm_pipeline/agents/data_engineer/: access_control.py  data_quality.py  mock_generator.py
src/rgm_pipeline/agents/data_scientist/: causal_baseline.py  demand_forecasting.py  explainability.py  optimizer.py
src/rgm_pipeline/agents/ml_engineer/: api.py  drift_monitor.py  schemas.py  security.py
src/rgm_pipeline/config/: settings.py
tests/: conftest.py  test_access_control.py  test_api.py  test_data_quality.py  test_demand_forecasting.py  test_mock_generator.py  test_optimizer.py
tests/integration/: test_api.py
tests/unit/: test_access_control.py  test_data_quality.py  test_demand_forecasting.py  test_mock_generator.py  test_optimizer.py
